--- a/cohmaps/resources/themes/uber-naked/style.css
+++ b/cohmaps/resources/themes/uber-naked/style.css
@@ -2,52 +2,53 @@
 /* -----| GALLERY LIST |----------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
+
 @font-face {
-  font-family: redcircl;
-  src: url(../fonts/redcircl.ttf);
+    font-family: redcircl;
+    src: url(../fonts/redcircl.ttf);
 }
+
 @font-face {
-  font-family: hero;
-  src: url(../fonts/Hero-Regular.ttf);
+    font-family: hero;
+    src: url(../fonts/Hero-Regular.ttf);
 }
 
 
 body {
-	background-color:#000;
-	color:#fff;
-	font-family: redcircl;	
-	margin-left:auto;
-	background-attachment: fixed;
-	background-position: right top;
-	background-repeat: no-repeat;
-	background-size:cover;
+    background-color: #000;
+    color: #fff;
+    font-family: redcircl;
+    margin-left: auto;
+    background-attachment: fixed;
+    background-position: right top;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
+
 .pictitle {
-	text-decoration:none;
-	color:#000;
-	font-size:18px;
-	text-align:center;
-	font-family: hero;
-	height:40px;
-	text-shadow: 2px 2px #000;	
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    font-family: hero;
+    height: 40px;
+    text-shadow: 2px 2px #000;
 }
+
 #galleryWrapper {
-	margin-left:auto;
-	margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .tooltip {
-        display:none;
-        position:absolute;
-        border:1px solid #195AA8;
-        background-color:#000;
-        padding:10px;
-        color:#fff;
+    display: none;
+    position: absolute;
+    border: 1px solid #195AA8;
+    background-color: #000;
+    padding: 10px;
+    color: #fff;
 }
 
-.cboxElement {
-}
 
 #galleryList {
     margin: 0;
@@ -56,37 +57,38 @@ body {
 
 #galleryList li {
 
-    	display: inline-block;
-    	list-style: none;
-    	margin: 5px 6px;
-    	padding: 0;
-	border-radius: 50px;
-  	background: linear-gradient(#000428, #004e92);
+    display: inline-block;
+    list-style: none;
+    margin: 5px 6px;
+    padding: 0;
+    border-radius: 20px;
+    background: linear-gradient(#000428, #004e92);
 
 
 }
+
 #galleryList li {
-box-shadow:
-    0 1px 0 rgba(255, 255, 255, 0.25),
-    0 1px 0 rgba(255, 255, 255, 0) inset,
-    0 0 5px rgba(0, 0, 0, 0.5) inset,
-    0 20px 0 rgba(255, 255, 255, 0.07) inset,
-    0 -20px 20px rgba(0, 0, 0, 0.15) inset,
-    0 20px 20px rgba(255, 255, 255, 0.05) inset;
+    box-shadow:
+        0 1px 0 rgba(255, 255, 255, 0.25),
+        0 1px 0 rgba(255, 255, 255, 0) inset,
+        0 0 5px rgba(0, 0, 0, 0.5) inset,
+        0 20px 0 rgba(255, 255, 255, 0.07) inset,
+        0 -20px 20px rgba(0, 0, 0, 0.15) inset,
+        0 20px 20px rgba(255, 255, 255, 0.05) inset;
 }
 
-#galleryList li:hover{
- 	background: linear-gradient(#01084a, #025eaf);
-	transform: translate(2px, -2px);
+#galleryList li:hover {
+    background: linear-gradient(#01084a, #025eaf);
+    transform: translate(2px, -2px);
 }
 
 
 #galleryList li a {
     display: block;
     padding: 4px;
-    width: 210px;	
+    width: 210px;
     text-decoration: none;
-    color:#fff;
+    color: #fff;
 }
 
 #galleryList li a:hover {
@@ -97,17 +99,20 @@ box-shadow:
     border: none;
     margin-left: 39px;
     border: 2px solid black;
-    border-radius:12px;
-	margin-top:20px;
+    border-radius: 5px;
+    margin-top: 20px;
 }
+
 #galleryList li a img {
-	margin-left:unset;
+    margin-left: unset;
 }
+
 #galleryList li a {
-	text-align: center;
+    text-align: center;
 }
+
 #galleryList {
-text-align: center;
+    text-align: center;
 }
 
 
@@ -167,7 +172,8 @@ text-align: center;
     padding: 3px 6px 3px 22px;
 }
 
-#galleryPagination li a, #galleryPagination li a:visited {
+#galleryPagination li a,
+#galleryPagination li a:visited {
     color: #369;
     display: block;
     padding: 3px 6px;
@@ -207,55 +213,62 @@ text-align: center;
 }
 
 * html .clearfix {
-    zoom: 1; /* IE6 */
+    zoom: 1;
+    /* IE6 */
 }
 
 *:first-child+html .clearfix {
-    zoom: 1; /* IE7 */
+    zoom: 1;
+    /* IE7 */
 }
+
 .home_button2 {
-	width:40px;
-	height:31px;
-	text-align:center;
-	vertical-align:middle;
-	border:1px solid #fff;
-	background:linear-gradient(to bottom, #000428, #004e92);	
-	top:19px;
-	left:13px;
-	position:absolute;
-	font-size:1.7em;
-	border-radius:10px;
-	margin-top:1px;
-	margin-left:5px;
-	display:none;
-	padding-top:4px;
+    width: 40px;
+    height: 31px;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px solid #fff;
+    background: linear-gradient(to bottom, #000428, #004e92);
+    top: 19px;
+    left: 13px;
+    position: absolute;
+    font-size: 1.7em;
+    border-radius: 10px;
+    margin-top: 1px;
+    margin-left: 5px;
+    display: none;
+    padding-top: 4px;
 
 }
+
 .home_button2:hover {
-		transform: translate(2px, -2px);
+    transform: translate(2px, -2px);
 }
+
 fa {
-	margin-top:10px;
-	margin-left:5px;
-	text-align:center;
-	verticle-align:middle;
+    margin-top: 10px;
+    margin-left: 5px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 
 @media screen and (max-width: 500px) {
-#galleryList li a img {
-	margin-left:unset;
-}
-#galleryList li a {
-	text-align: center;
-}
-.home_button2 {
-	display:block;
-}
+    #galleryList li a img {
+        margin-left: unset;
+    }
 
-#galleryList {
-text-align: center;
-}
+    #galleryList li a {
+        text-align: center;
+    }
+
+    .home_button2 {
+        display: block;
+    }
+
+    #galleryList {
+        text-align: center;
+    }
 }
 
 /**
