--- a/cohmaps/resources/themes/uber-naked/style.css
+++ b/cohmaps/resources/themes/uber-naked/style.css
@@ -19,10 +19,10 @@ body {
     color: #fff;
     font-family: redcircl;
     margin-left: auto;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-
+	background-attachment: fixed;
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .pictitle {
