--- a/css/codex.css
+++ b/css/codex.css
@@ -319,6 +319,12 @@ body {
 	max-width: 250px;
 }
 
+.enhance_sub_text {
+	padding-left: 10px;
+	font-size: 16px;
+	max-width: 250px;
+}
+
 .enhance_body_display {
 	display: flex;
 	flex-flow: row wrap;
@@ -333,15 +339,11 @@ body {
 	padding: 10px 5px 5px 5px;
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: right;
 	width: 350px;
 	font-family: hero !important;
 	color: #FFFFFF;
 	border-radius: 35px;
 	background: linear-gradient(#000428, #004e92);
-}
-
-.enhance_display {
 	box-shadow:
 		0 1px 0 rgba(255, 255, 255, 0.25), 0 1px 0 rgba(255, 255, 255, 0) inset, 0 0 5px rgba(0, 0, 0, 0.5) inset, 0 20px 0 rgba(255, 255, 255, 0.07) inset, 0 -20px 20px rgba(0, 0, 0, 0.15) inset, 0 20px 20px rgba(255, 255, 255, 0.05) inset;
 	justify-content: left;
