--- a/css/codex.css
+++ b/css/codex.css
@@ -59,6 +59,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	transition: background-image 200ms ease-in .5s;
+	line-height: 1 !important;
 }
 
 .page_header {
@@ -320,7 +321,6 @@ body {
 }
 
 .enhance_sub_text {
-	padding-left: 10px;
 	font-size: 14px;
 	max-width: 250px;
 }
