--- a/css/codex.css
+++ b/css/codex.css
@@ -328,7 +328,7 @@ body {
 .enhance_body_display {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: space-evenly;
+	justify-content: center;
 	max-width: 1400px;
 	margin-left: auto;
 	margin-right: auto;
@@ -485,6 +485,16 @@ body {
 	position: absolute;
 	margin-top: 10px;
 	margin-left: 5px;
+}
+
+.home_button2 {
+	text-align: center;
+	vertical-align: middle;
+	top: 10px;
+	right: 13px;
+	position: absolute;
+	margin-top: 10px;
+	margin-right: 5px;
 }
 
 fa {
