--- a/css/codex.css
+++ b/css/codex.css
@@ -6,13 +6,13 @@
 @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
 
 @font-face {
-	font-family: redcircl;
-	src: url(../fonts/redcirl.ttf);
+	font-family: redcirl;
+	src: url(../fonts/Red-Circle-Regular.ttf) format('ttf');
 }
 
 @font-face {
 	font-family: hero;
-	src: url(../fonts/Hero-Regular.ttf);
+	src: url(../fonts/Hero-Regular.ttf) format('ttf');
 }
 
 *::after {
@@ -52,7 +52,7 @@ a:hover {
 body {
 	background-color: #000;
 	color: #fff;
-	font-family: redcircl !important;
+	font-family: redcirl, sans-serif !important;
 	background-image: url('../images/city_back_blue.png');
 	background-attachment: fixed;
 	background-position: center top;
@@ -117,7 +117,7 @@ body {
 	padding: 20px 10px 10px 20px;
 	display: flex;
 	flex-flow: row wrap;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	justify-content: space-evenly;
 	width: 275px;
 	color: #FFFFFF;
@@ -152,7 +152,7 @@ body {
 	padding-top: 20px;
 	margin-right: auto;
 	margin-left: auto;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	text-align: center;
 	text-shadow: 2px 2px #000;
 }
@@ -163,7 +163,7 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	text-shadow: 2px 2px #000;
 }
 
@@ -174,7 +174,7 @@ body {
 	margin-bottom: 10px;
 	padding: 20px 5px 5px 0px;
 	display: flex;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	flex-direction: row;
 	flex-wrap: wrap;
 	flex-flow: row wrap;
@@ -208,7 +208,7 @@ body {
 	flex-flow: row wrap;
 	justify-content: center;
 	width: 145px;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	color: #FFFFFF;
 	border-radius: 35px;
 	background: linear-gradient(#000428, #004e92);
@@ -237,7 +237,7 @@ body {
 	padding: 20px 10px 10px 20px;
 	display: flex;
 	flex-flow: row wrap;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	justify-content: space-evenly;
 	width: 275px;
 	color: #FFFFFF;
@@ -262,7 +262,7 @@ body {
 	text-align: center;
 	margin-right: auto;
 	margin-left: auto;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	text-shadow: 2px 2px #000;
 }
 
@@ -289,7 +289,7 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	text-shadow: 2px 2px #000;
 }
 
@@ -340,7 +340,7 @@ body {
 	display: flex;
 	flex-flow: row wrap;
 	width: 350px;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	color: #FFFFFF;
 	border-radius: 35px;
 	background: linear-gradient(#000428, #004e92);
@@ -363,7 +363,7 @@ body {
 	flex-flow: row wrap;
 	justify-content: left;
 	width: 350px;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	color: #FFFFFF;
 	border-radius: 35px;
 	background: linear-gradient(#000428, #004e92);
@@ -414,7 +414,7 @@ body {
 	background-color: #000;
 	max-width: 400px;
 	font-size: 17px;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	border-radius: 10px;
 	min-height: 30px;
 }
@@ -429,7 +429,7 @@ body {
 	padding: 20px 10px 10px 20px;
 	display: flex;
 	flex-flow: row wrap;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	justify-content: space-evenly;
 	width: 340px;
 	height: 80px;
@@ -455,7 +455,7 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
-	font-family: hero !important;
+	font-family: hero, sans-serif !important;
 	text-shadow: 2px 2px #000;
 }
 
